# superheroes-python

./: README.md  pyproject.toml
superheroes_python/: get_characters.py  main.py
tests/: test_superheroes_python.py
