[tool.poetry]
name = "superheroes-python"
version = "0.1.0"
description = ""
authors = ["Alex Marriott <alex.marriott@buildcircle.co.uk>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest-mock = "^3.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
